infrastructure/terraform/modules/network/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_hostnames = true

  tags = {
    Name = "${local.prefix}-vpc"
  }
}
